--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <div id="app"></div>
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
+    <script type="text/javascript" src="https://appx/web-view.min.js"></script>
+    <script type="text/javascript" src="https://uc-static.wuta-cam.com/assets/WT.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
